# lobbyguard

./: AGENTS.md  ARCHITECTURE.md  Cargo.toml  DEVELOPMENT.md  README.md  build.rs  rust-toolchain.toml  rustfmt.toml
lobbyguard-cli/: Cargo.toml  README.md
lobbyguard-cli/src/: connection_tracker.rs  filter.rs  lib.rs  main.rs  packet_processor.rs  wmi_monitor.rs
lobbyguard-cli/src/wmi/: models.rs
lobbyguard-common/: Cargo.toml
lobbyguard-common/src/: config.rs  engine.rs  events.rs  flow.rs  lib.rs  monitor.rs  process.rs
lobbyguard-core/: Cargo.toml
lobbyguard-core/src/: capture.rs  constants.rs  error.rs  lib.rs  packet_data.rs  storage.rs
lobbyguard-gui/: Cargo.toml  README.md
lobbyguard-gui/src/: actions.rs  capture.rs  component.rs  components.rs  error.rs  main.rs  main_component.rs  theme.rs  utils.rs  view.rs  viewer.rs
lobbyguard-gui/src/components/: mode_selector.rs  stat_card.rs  status_bar.rs
src/: main.rs
