[package]
name = "lobbyguard-cli"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
etherparse = "0.19"
windivert = ">=0.7.0-beta"
tokio = { version = "1", features = ["full"] }
argh = "0.1"
pcap-file = ">=3.0.0-rc1"
wmi = "0.18"
serde = { version = "1.0", features = ["derive"] }
futures = { version = "0.3" }
dashmap = ">=7.0.0-rc2"
fastrace = { version = "0.7", features = ["enable"] }
log = { version = "0.4.27" }
logforth = { version = "0.29", features = ["starter-log", "append-fastrace"] }

[build-dependencies]
winres = "0.1"
