[package]
name = "lobbyguard-common"
version = "0.1.0"
edition = "2021"

[dependencies]
etherparse = "0.19.0"
windivert = { version = ">=0.7.0-beta" }
dashmap = "6.1.0"
windows-sys = { version = "0.59", features = ["Win32_System_Threading", "Win32_System_ProcessStatus", "Win32_Foundation"] }
wmi = "0.18.0"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
tokio = { version = "1.41", features = ["full"] }
tracing = "0.1"
